--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="scriptcss.js"></script>
     </head>
     <body>
-        <h1 id="head1">Polypodiopsida</h1>
+        <h1 id="head1">Oleve</h1>
         <script src="script.js"></script>
     </body>
 </html>
